@@ -67,6 +67,7 @@ opsi-winst/opsi-script (4.12.1.0) experimental; urgency=low
   * unit oscrypt with {$RANGECHECKS OFF}
   * osparserhelper: fix in geouterfunction
   * osdefinedfunction: isvisiblelocalvar: serach optimization
+  * osfunc: checkfileexists: use widechsr/utf16 for filenames
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200
 
